# CudaMandelbrot

./: CMakeLists.txt  README.md
include/CM/: gpu.h  gui.h  shader.h  timer.h  utils.h
src/: gpu.cu  gui.cpp  main.cpp  shader.cpp  timer.cpp
